lsp rename keymap

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
           <td>move selected lines up</td>
           <td>v</td>
         </tr>
+        <tr>
+          <td>LEADER rn</td>
+          <td>lsp rename</td>
+          <td>n</td>
+        </tr>
       </table>
     </div>
   
